--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resizer-JS</title>
+    <link rel="icon" type="image/x-icon" href="samp1.ico">
     <script type="module" crossorigin src="index-53317295.js"></script>
     <link rel="stylesheet" href="index-7ac5433c.css">
   </head>
