upgrade deps and 2 new features

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resizer-JS</title>
     <link rel="icon" type="image/x-icon" href="samp1.ico">
-    <script type="module" crossorigin src="index-53317295.js"></script>
-    <link rel="stylesheet" href="index-7ac5433c.css">
+    <title>Resizer-JS</title>
+    <script type="module" crossorigin src="/index-CNt6LsUz.js"></script>
+    <link rel="stylesheet" crossorigin href="/index-Bx82Ak8L.css">
   </head>
   <body>
     <div id="root"></div>
-    
   </body>
 </html>
