--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="samp1.ico">
     <title>Resizer-JS</title>
-    <script type="module" crossorigin src="/index-CNt6LsUz.js"></script>
-    <link rel="stylesheet" crossorigin href="/index-Bx82Ak8L.css">
+    <script type="module" crossorigin src="index-Dqk1dkx4.js"></script>
+    <link rel="stylesheet" crossorigin href="index-vvGIcyjJ.css">
   </head>
   <body>
     <div id="root"></div>
+
   </body>
 </html>
