--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="samp1.ico">
     <title>Resizer-JS</title>
-    <script type="module" crossorigin src="index-Dqk1dkx4.js"></script>
-    <link rel="stylesheet" crossorigin href="index-vvGIcyjJ.css">
+    <script type="module" crossorigin src="index-BJWLqTZm.js"></script>
+    <link rel="stylesheet" crossorigin href="index-C3ur01UG.css">
   </head>
   <body>
     <div id="root"></div>
